--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -41,10 +41,14 @@
                     <li>
                         <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
+                    {% if flag == 1 %}
+                        <li><a href="{% url 'testcreate' %}">Create Test</a>
+                        </li>
+                    {% else %}
                     <li>
                         <a class="page-scroll" href="{% url 'store' %}">Store</a>                       
                     </li>                    
-                    
+                    {% endif %}
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
