--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -41,8 +41,13 @@
                         <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
                     <li>
+                    {% if isLearner == 'yes' %}
                         <a class="page-scroll" href="{% url 'store' %}">Store</a>                       
+                    {% else %}
+                        <a href="{% url 'testcreate' %}">Create Test</a>
+                    {% endif %}
                     </li>                    
+                    
                     
                     <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
