--- a/chingoal/testpage/templates/testpage/post_question.html
+++ b/chingoal/testpage/templates/testpage/post_question.html
@@ -1,41 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    {% block title-content %}
     <title>Chingoal_PostQuestion</title>
+    {% endblock %}
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+     {% block head %}
+    {% load static %}
+    <link href="{% static "css/custom_post_question.css"%}" rel="stylesheet">
+    {% endblock %}
+    {% block head-origin %}
+    <!-- <link href="{% static "css/agency.css"%}" rel="stylesheet"> -->
+    {% endblock %}
 
-    <!-- Custom CSS -->
-    <link href="css/agency_other.css" rel="stylesheet">
-    <link href="css/custom_post_question.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top" class="index">
-
+    {% block main-content %}
+    {% load static %}
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -57,22 +36,37 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Lessons</a>
+                        <a class="page-scroll" href="{% url 'dashboard' %}">Lessons</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Discussion</a>
+                        <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Store</a>
+                        <a class="page-scroll" href="{% url 'store' %}">Store</a>                       
                     </li>                    
-                    <li>
-                        <a class="page-scroll" href="#contact">About Us</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll">
-                            <img src="static/img/profile.jpg" class="img-responsive img-circle"  alt="" id="header_profile_picture">
-                        </a>
-                    </li>
+                    
+                    <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="{% url 'viewProfile' username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+
+                        {% if flag == 1 %}
+                        <li><a href="{% url 'testcreate' %}"><i class="fa fa-plus-circle fa-fw"></i> Create Test</a>
+                        </li>
+                        {% endif %}
+
+
+                        <li class="divider"></li>
+                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                    </li>   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -229,27 +223,9 @@
             </div>
         </div>
     </footer>
+ {% endblock %}
 
-    
+    {% block origin-script %}
+    {% endblock %}
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader_other.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
-
-</body>
-
-</html>
+  
