add link on aboutus button

--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -46,7 +46,7 @@
                         <a class="page-scroll" href="#account">Account</a>
                     </li> -->
                     <li>
-                        <a class="page-scroll" href="{% url 'login' %}">About Us</a>
+                        <a class="page-scroll" href="/">About Us</a>
                     </li>
                 </ul>
             </div>
