--- a/chingoal/testpage/static/css/custom_learn.css
+++ b/chingoal/testpage/static/css/custom_learn.css
@@ -18,3 +18,18 @@
 .panel-footer {
     background-color: white;
 }
+
+#left {
+    float: left;
+    width: 50%;
+    background: red;
+    height: 100%;
+    overflow: scroll;
+}
+#right {
+    float: left;
+    width: 50%;
+    background: blue;
+    height: 100%;
+    overflow: scroll;
+}
