update the view_profile

--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -128,8 +128,8 @@
                                 {% if isLearner == 'yes' %}
                                 Title: {{ cur_user.title}}<br/>
                                 Achievement: {{ cur_user.lesson_plan}}<br/>                            
-                                Schedule: {{cur_user.progress_level}} Level
-                                		  {{cur_user.progress_lesson}} Lesson per day
+                                Schedule: {{cur_user.progress_level}}
+                                		  {{cur_user.progress_lesson}}per day
                                          
                                          <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">Edit</button>
                                        
