Add teacher's title

--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -95,6 +95,8 @@
                     </h3>
                     {% if flag == 0 %}   
                     <h4 class="text-muted">{{cur_user.title}}</h4>
+                    {% else %}
+                    <h4 class="text-muted">Teacher</h4>
                     {% endif %}
                 </div>
                 <div class="col-lg-4 text-center">
