--- a/chingoal/account/templates/account/reset.html
+++ b/chingoal/account/templates/account/reset.html
@@ -2,9 +2,11 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block mainblock %}
+{{ error}}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    
     <button type="submit">Submit</button>
 </form>
 {% endblock %}
