--- a/chingoal/testpage/templates/testpage/post_question.html
+++ b/chingoal/testpage/templates/testpage/post_question.html
@@ -79,105 +79,23 @@
             <br>
             </div>
             <div class="row">
-                <div class="col-lg-6" id="left">
-
-
-
+                <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             Creating Test
                         </div>
                         <div class="panel-body">
-                           <ul style="list-style: none; ">
-                               <li>
-                                  <div class="panel panel-success">
-                                    <div class="panel-heading">
-                                    Question 1 (Word Translate)
-                                    </div>
-                                    <div class="panel-body">
-                                        <div class="form-group">
-                                            <label>Input the question content</label>
-                                            <input class="form-control" placeholder="Enter text">
-                                            <br>
-                                            <label>Input the answer content</label>
-                                            <input class="form-control" placeholder="Enter text">
-                            </div>            
-                        </div>
-                        <div class="panel-footer">
-                                <button type="button" class="btn btn-info">Save</button>
-                                <button type="button" class="btn btn-warning">Edit</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-
-  
-                               </li>
-                               <li>
-                                  <div class="panel panel-success">
-                                    <div class="panel-heading">
-                          Question 2 (Multiple Choice)
-                        </div>
-                        <div class="panel-body">
- <div class="form-group">
-                                <label>Input the question content</label>
-                                <input class="form-control" placeholder="Enter text">
-                                <br>
-                                <label>Input the choice content</label>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">A</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">B</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">C</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">D</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <label>Chooseing the correct answer</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked>A
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">B
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option3">C
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option4">D
-                                </label>
-                                <br>
-                                <label>Answer Explanation</label>
-                                <input class="form-control" placeholder="Explanation">
-                            </div>            
-                        </div>
-                        <div class="panel-footer">
-                                <button type="button" class="btn btn-info">Save</button>
-                                <button type="button" class="btn btn-warning">Edit</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-
-  
-                               </li>
+                            <ul style="list-style: none;" id="question">
 
                            </ul>                             
                         </div>
                         <div class="panel-footer">
                             <div class="row">
                                 <div class="col-lg-4">
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Add Multiple Choice</button>
+                                <button id="question-mc" type="button" class="btn btn-primary btn-lg btn-block">Add Multiple Choice</button>
                                 </div>
                                 <div class="col-lg-4">
-                                <button type="button" class="btn btn-success btn-lg btn-block">Add Word Translate</button>
+                                <button id="question-tr" type="button" class="btn btn-success btn-lg btn-block">Add Word Translate</button>
                                 </div>
                                 <div class="col-lg-4">
                                 <button type="button" class="btn btn-info btn-lg btn-block">Post</button>
@@ -188,115 +106,6 @@
                     </div>
                 </div>
                 <!-- /.col-lg-4 -->
-                <div class="col-lg-6" id="right">
-
-
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            Creating Test
-                        </div>
-                        <div class="panel-body">
-                           <ul style="list-style: none; ">
-                               <li>
-                                  <div class="panel panel-success">
-                                    <div class="panel-heading">
-                                    Question 1 (Word Translate)
-                                    </div>
-                                    <div class="panel-body">
-                                        <div class="form-group">
-                                            <label>Input the question content</label>
-                                            <input class="form-control" placeholder="Enter text">
-                                            <br>
-                                            <label>Input the answer content</label>
-                                            <input class="form-control" placeholder="Enter text">
-                            </div>            
-                        </div>
-                        <div class="panel-footer">
-                                <button type="button" class="btn btn-info">Save</button>
-                                <button type="button" class="btn btn-warning">Edit</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-
-  
-                               </li>
-                               <li>
-                                  <div class="panel panel-success">
-                                    <div class="panel-heading">
-                          Question 2 (Multiple Choice)
-                        </div>
-                        <div class="panel-body">
- <div class="form-group">
-                                <label>Input the question content</label>
-                                <input class="form-control" placeholder="Enter text">
-                                <br>
-                                <label>Input the choice content</label>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">A</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">B</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">C</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">D</span>
-                                    <input type="text" class="form-control" placeholder="Choice Text">
-                                </div>
-                                <label>Chooseing the correct answer</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked>A
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">B
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option3">C
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option4">D
-                                </label>
-                                <br>
-                                <label>Answer Explanation</label>
-                                <input class="form-control" placeholder="Explanation">
-                            </div>            
-                        </div>
-                        <div class="panel-footer">
-                                <button type="button" class="btn btn-info">Save</button>
-                                <button type="button" class="btn btn-warning">Edit</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-
-  
-                               </li>
-
-                           </ul>                             
-                        </div>
-                        <div class="panel-footer">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Add Multiple Choice</button>
-                                </div>
-                                <div class="col-lg-4">
-                                <button type="button" class="btn btn-success btn-lg btn-block">Add Word Translate</button>
-                                </div>
-                                <div class="col-lg-4">
-                                <button type="button" class="btn btn-info btn-lg btn-block">Post</button>
-                                </div>
-                            </div>
-                            
-                        </div>
-                    </div>
-
-                
-                </div>
             </div>
         </div>
     </section>
@@ -335,3 +144,7 @@
     {% endblock %}
 
   
+{% block script-content %}
+{% load static %}
+<script src="{% static "js/post_question.js"%}"></script>
+{% endblock %}
