--- a/chingoal/account/templates/account/confirm.html
+++ b/chingoal/account/templates/account/confirm.html
@@ -7,7 +7,7 @@
 
 <body>
     <div id="content">
-        <h2>You are authoticated!</h2>
+        <h2>You are authenticated!</h2>
     </div>
 </body>
 </html
