--- a/chingoal/account/templates/account/reset.html
+++ b/chingoal/account/templates/account/reset.html
@@ -2,11 +2,17 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block mainblock %}
-{{ error}}
+<h3 class="title">Enter your email address</h3>
+<div class="style">
+{% if error %}
+<p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+{% endif %}
+
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     
-    <button type="submit">Submit</button>
+    <button id= "button1" type="submit">Send</button>
 </form>
+</div>
 {% endblock %}
