--- a/chingoal/testpage/templates/multichoice.html
+++ b/chingoal/testpage/templates/multichoice.html
@@ -1,7 +1,7 @@
 <li>
 <div class="panel panel-success">
 <div class="panel-heading">
-Question {{id}} (Word Translate)
+Question <p class="question-num" style="display:inline">{{id}}</p> (Word Translate)
 </div>
 <div class="panel-body">
 <div class="form-group">
@@ -13,9 +13,9 @@ Question {{id}} (Word Translate)
 </div>            
 </div>
 <div class="panel-footer">
-<button type="button" class="btn btn-info">Save</button>
+<button type="button" class="btn btn-info save-btn">Save</button>
 <!-- <button type="button" class="btn btn-warning">Edit</button> -->
-<button type="button" class="btn btn-danger">Delete</button>
+<button type="button" class="btn btn-danger delete-btn">Delete</button>
 </div>
 </div>
 </li>
