--- a/chingoal/discussion/static/css/custom_discussion_board.css
+++ b/chingoal/discussion/static/css/custom_discussion_board.css
@@ -1,4 +1,4 @@
-#profile_img{
+/*#profile_img{
     width: 100px;
     height: 100px;    
     margin-bottom: 40px;
@@ -8,8 +8,19 @@
     width: 50px;
     height: 50px;
 }
-
+*/
 
 .modal-dialog {
     /*margin-top: 300px;*/
+}
+
+.reply_row {
+    padding-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.delete-btn {
+    margin-top: 15px;
 }
