--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -87,30 +87,14 @@
                     <td># Replies</td>
                     </tr>
                 </thead>
-                <!-- <tr>
-                    <td>1</td>
-                    <td>How to Solve This Problem?</td>
-                    <td>User 1</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>How does this happen?</td>
-                    <td>User 1</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>How to explain this?</td>
-                    <td>User 3</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>How to Solve This Problem?</td>
-                    <td>User 4</td>
-                    <td>3</td>
-                </tr> -->
+                {% for post in posts %}
+                    <tr>
+                        <td>{{post.post.id}}</td>
+                        <td><a href="{% url 'discussion_reply' post.post.id %}">{{post.post.title}}</a></td>
+                        <td>{{post.post.author.username}}</td>
+                        <td>{{post.number_replies}}</td>
+                    </tr>
+                {% endfor %}                
                 </table>
             </div>
             <div class="col-lg-1"></div>            
@@ -168,10 +152,14 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h4 class="modal-title" id="myModalLabel">New Post</h4>
             </div>
+            <p></p>
             <div class="modal-body">
                 <form role="form">
                     <div class="form-group">
-                        <textarea class="form-control" rows="5" id="postText"></textarea>
+                        <p></p>
+                        <textarea class="form-control" rows="1" id="postTitle" placeholder="Post Title"></textarea>
+                        <p></p>
+                        <textarea class="form-control" rows="5" id="postText" placeholder="Post Text"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary" id="postBtn">Post</button>
                     <button type="reset" class="btn btn-warning" id="resetBtn">Reset</button>
@@ -181,6 +169,11 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block script-content %}
+{% load static %}
+<script src="{% static 'js/discussion.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 
