--- a/chingoal/account/templates/account/reset.html
+++ b/chingoal/account/templates/account/reset.html
@@ -2,7 +2,7 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block mainblock %}
-<h3 class="title">Enter your email address</h3>
+<h3>Enter your email address</h3>
 <div class="style">
 {% if error %}
 <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
