--- a/chingoal/discussion/templates/discussion/discussion_board.html
+++ b/chingoal/discussion/templates/discussion/discussion_board.html
@@ -117,12 +117,12 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                        <li><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a>
+                    </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
