--- a/chingoal/discussion/static/css/custom_discussion_board.css
+++ b/chingoal/discussion/static/css/custom_discussion_board.css
@@ -1,14 +1,14 @@
-/*#profile_img{
+#profile_img{
     width: 100px;
     height: 100px;    
-    margin-bottom: 40px;
+    margin: auto;
 }
 
-#header_profile_picture {
+#reply_user_profile_img {
     width: 50px;
     height: 50px;
 }
-*/
+
 
 .modal-dialog {
     /*margin-top: 300px;*/
