--- a/chingoal/discussion/templates/discussion/post_base.html
+++ b/chingoal/discussion/templates/discussion/post_base.html
@@ -1,1 +1,1 @@
-<tr><td>{{post.id}}</td><td><a href='{% url 'discussion_reply' post.id %}'>{{post.title}}</a></td><td>{{post.author.username}}</td><td>0</td></tr>
+<tr><td class='list_number_col'></td><td><a href='{% url 'discussion_reply' post.id %}'>{{post.title}}</a></td><td>{{post.author.username}}</td><td class='number_replies_col'></td></tr>
