--- a/chingoal/account/templates/account/view_profile.html
+++ b/chingoal/account/templates/account/view_profile.html
@@ -58,7 +58,7 @@
                              <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="{% url 'viewProfile' username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        <li><a href="{% url 'viewProfile' cur_username %}"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
                         <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
