--- a/chingoal/account/static/css/custom_view_profile.css
+++ b/chingoal/account/static/css/custom_view_profile.css
@@ -165,6 +165,7 @@ body
 	border:1px solid black;
 	margin-left:80px;
 	margin-right:30px;
+	padding:0px;
 	float:left;
 	width:100%;
 	}
@@ -198,15 +199,16 @@ body
 	height:250px; 
 }
 .faceul3 li{
-    width:100px;
+    width:30%;
     height:85px;
 	position:relative;
 	float:left;
-	
-	
+	left:-15px;
 	bottom:4px;
 	margin-bottom:5px;
+	margin-right:8px;
     text-align:center;
+	
 	list-style-type: none;
 }
 .faceul3 img{
