--- a/chingoal/testpage/templates/testpage/learn.html
+++ b/chingoal/testpage/templates/testpage/learn.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-lg-8">
                         <img src="{{cur_user.photo.url}}" class="img-responsive img-circle">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='chingoal-test.html'">Testout</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="location.href='{% url 'gettest' %}'">Testout</button>
                     </div>
                     <div class="col-lg-2">
                     </div>
