--- a/chingoal/testpage/templates/translate.html
+++ b/chingoal/testpage/templates/translate.html
@@ -32,4 +32,5 @@ Question <p class="question-num" style="display:inline">{{id}}</p> (Word Transla
 <button type="button" class="btn btn-danger delete-btn">Delete</button>
 </div>
 </div>
+</form>
 </li>
