--- a/chingoal/testpage/templates/testpage/test.html
+++ b/chingoal/testpage/templates/testpage/test.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="{% url 'discussion_home' %}">Discussion</a>
                     </li>
                     <li>
-                        <a href="#">Create Test</a> 
+                        <a class="page-scroll" href="{% url 'store' %}">Store</a>
                     </li>                    
                     
                     <li class="dropdown">
@@ -83,18 +83,100 @@
                         <div class="panel-body">
                             <ul style="list-style: none;" id="question">
 
+                                {% for item in question %}
+
+{% if item.qtype == "tr" %}
+<li>
+<!-- <form action="{% url 'testsavetrquestion' id %}" method="post"> -->
+<div class="panel panel-success">
+<div class="panel-heading">
+Question <p class="question-num" style="display:inline">{{item.id}}</p> (Word Translate)
+</div>
+<div class="panel-body">
+<div class="form-group">
+<div class="row">
+<div class="col-lg-12">{{item.question}}</div>
+</div>
+<br>
+<label>Input the answer content</label>
+<div class="row">
+{% if form.explanation.errors %}
+<div class="col-lg-8">{{form.explanation}}</div>
+<div class="col-lg-4" style="color:red">{{form.explanation.errors}}</div>
+{% else %}
+<div class="col-lg-12">{{form.explanation}}</div>
+{% endif %}
+</div>
+</div>            
+</div>
+<div class="panel-footer">
+<button type="button" class="btn btn-info save-btn">Save</button>
+</div>
+</div>
+</li>
+{% else %}
+<li>
+<!-- <form action="{% url 'testsavemcquestion' id %}" method="post"> -->
+<div class="panel panel-success">
+<div class="panel-heading">
+Question <p class="question-num" style="display:inline">{{item.id}}</p> (Multiple Choice)
+</div>
+<div class="panel-body">
+<div class="form-group">
+{{item.question}}
+</div>
+<div class="form-group input-group">
+<span class="input-group-addon">A</span>
+{{item.a}}
+</div>
+
+<div class="form-group input-group">
+<span class="input-group-addon">B</span>
+{{item.b}}
+</div>
+
+<div class="form-group input-group">
+<span class="input-group-addon">C</span>
+{{item.c}}
+</div>
+
+<div class="form-group input-group">
+<span class="input-group-addon">D</span>
+{{item.d}}
+</div>
+
+<label>Chooseing the correct answer</label>
+<label class="radio-inline">
+<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="A" checked>A
+</label>
+<label class="radio-inline">
+<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="B">B
+</label>
+<label class="radio-inline">
+<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="C">C
+</label>
+<label class="radio-inline">
+<input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="D">D
+</label>
+<br>
+
+</div>
+<div class="panel-footer">
+<button type="button" class="btn btn-info save-btn">Save</button>
+</div>
+</div>
+<!-- </form> -->
+</li>
+{% endif %}
+
+                                {% endfor %}
+
                            </ul>                             
                         </div>
                         <div class="panel-footer">
                             <div class="row">
                                 <div class="col-lg-4">
-                                <button id="question-mc" type="button" class="btn btn-primary btn-lg btn-block">Add Multiple Choice</button>
-                                </div>
-                                <div class="col-lg-4">
-                                <button id="question-tr" type="button" class="btn btn-success btn-lg btn-block">Add Word Translate</button>
-                                </div>
-                                <div class="col-lg-4">
-                                <button id="posttest" type="button" class="btn btn-info btn-lg btn-block">Post</button>
+                                <button id="posttest" type="button" class="btn btn-info btn-lg btn-block">Submit</button>
                                 </div>
                             </div>
                             
@@ -142,5 +224,5 @@
   
 {% block script-content %}
 {% load static %}
-<script src="{% static "js/post_question.js"%}"></script>
+<script src="{% static "js/test_question.js"%}"></script>
 {% endblock %}
