update profile image

--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
+                        <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
                             <source src="static/video/SampleVideo.mp4" type = "video/mp4">
                             <source src="static/video/SampleVideo.webm" type = "video/webm">
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
+                        <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY CONTROLS LOOP TO AUTOREPLAY-->
                             <source src="static/video/SampleVideo.mp4" type = "video/mp4">
                             <source src="static/video/SampleVideo.webm" type = "video/webm">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" autoplay > 
+                        <video id="lesson_video" autoplay loop> 
                             <!-- IF NEEDED ADD AUTOPLAY TO AUTOPLAY -->
                             <source src="static/video/SampleVideo.mp4" type = "video/mp4">
                             <source src="static/video/SampleVideo.webm" type = "video/webm">
@@ -304,10 +304,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img src="{% static "img/team/1.jpg"%}" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
+                        <h4>Mingda Zhang</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -319,10 +319,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img src="{% static "img/team/2.jpg"%}" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
+                        <h4>Jian Gong</h4>
                         <p class="text-muted">Lead Marketer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -334,10 +334,25 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img src="{% static "img/team/3.jpg"%}" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
+                        <h4>Jingwen Qiang</h4>
+                        <p class="text-muted">Lead Developer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="{% static "img/team/4.jpg"%}" class="img-responsive img-circle" alt="">
+                        <h4>Ning Wang</h4>
                         <p class="text-muted">Lead Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
