add delete room button

--- a/chingoal/discussion/templates/discussion/index.html
+++ b/chingoal/discussion/templates/discussion/index.html
@@ -26,6 +26,7 @@
 					<tr>
 						<th>{{ item.id }}</th>
 						<th><a href="/discussion/"+{{item.id}}>{{ item }}</a></th>
+						<th><a href="/discussion/delete"+{{item.id}}>X</a></th>
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -41,7 +42,8 @@ function updaterooms() {
 		    var rooms = data['rooms'];
             for (num in rooms) {
                 var room = rooms[num];
-                var html = '<tr><th>'+room.id+'</th><th><a href="/discussion/"'+room.id+'>'+room.roomname+'</a></th></tr>'
+                var html = '<tr><th>'+room.id+'</th><th><a href="/discussion/"'+room.id+'>'+room.roomname+'</a></th>\
+                <th><a href="/discussion/delete"'+room.id+'>X</a></th></tr>';
                 $('#roomlist').append(html);   
             }          
         });
